          refactored to support this approach as well with many new
          constructors added. Suggested by Marc Portier.
        - TransformRepresentation has been refactored to support SAX
          pipelining when multiple TransformRepresentation are nested.
          Suggested by Marc Portier. 
        - Added a getValuesMap() method to the Series class.
        
    - NRE and Extension Enhancements
        - Made the ServerServlet.create*() method protected instead of 
          public.
        - Added a ServerServlet.createCall() and createWarClient() 
          methods for easier subclassing by the XDB extension. 
          Some contributions from Marcelo Ochoa.
        - Added new javax.annotation library for the JAX-RS extension.
        - Added ServerServlet.getClass() method to facilitate 
          subclassing by the XDB extension. Suggested by Marcelo Ochoa.
        - Added new constructors to JiBX extension not requiring the
          binding name parameter.
        - Distributed experimental JAX-RS extension implementing the
          JSR-311 draft specification. Contributed by Stephan Koops.
        - All HTTP server connectors now expose the client certificates
          using the "org.restlet.https.clientCertificates" request 
          attribute. Contributed by Bruno Harbulot.
        - Updated Java Activation Framework to version 1.1.1.
        - Updated JavaMail library to version 1.4.1.
        - Removed the SpringApplication class as an XML configuration
          alternative is now documented. 
        - Updated db4o to version 7.2 with transparent activation 
          and update.
        - Improve logging for internal HTTP server when created thread
          throw uncaught exceptions. Contributed by Kevin Conaway.
        - HTTPS server connectors expose new attributes related 
          to SSL: "org.restlet.https.cipherSuite" and 
          "org.restlet.https.keySize". Contributed by Bruno Harbulot.
    - Misc